--- a/HTensor.cabal
+++ b/HTensor.cabal
@@ -19,6 +19,7 @@ library
                      , Constants
                      , Iris
                      , Processing
+                     , Digits
   ghc-options:         -Wall -Werror
   build-depends:       base >= 4.7 && < 5
                      , bytestring
@@ -28,6 +29,7 @@ library
                      , tensorflow-ops
                      , tensorflow-core-ops
                      , tensorflow-logging
+                     , tensorflow-mnist
                      , text
                      , vector
                      , proto-lens
@@ -44,6 +46,14 @@ executable HTensor-exe
 executable run-iris
   hs-source-dirs:      app
   main-is:             IrisMain.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , HTensor
+  default-language:    Haskell2010
+
+executable run-mnist
+  hs-source-dirs:      app
+  main-is:             MnistMain.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , HTensor
