--- a/HTensor.cabal
+++ b/HTensor.cabal
@@ -24,6 +24,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , cassava
+                     , lens
                      , random-shuffle
                      , tensorflow
                      , tensorflow-ops
