Kinda failing dependent types.

--- a/HTensor.cabal
+++ b/HTensor.cabal
@@ -21,7 +21,8 @@ library
                      , Processing
                      , Digits
                      , DTensor
-  ghc-options:         -Wall -Werror
+                     , SingPractice
+  ghc-options:         -Wall
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , cassava
