--- a/HTensor.cabal
+++ b/HTensor.cabal
@@ -40,6 +40,7 @@ library
                      , singletons
                      , constraints
                      , vector-sized
+                     , type-list
   default-language:    Haskell2010
 
 executable HTensor-exe
