Some progress on placeholders, but might backtrack

--- a/HTensor.cabal
+++ b/HTensor.cabal
@@ -26,6 +26,7 @@ library
   ghc-options:         -Wall
   build-depends:       base >= 4.7 && < 5
                      , bytestring
+                     , containers
                      , cassava
                      , lens
                      , random-shuffle
